fix (ad_generator): product image no overflow

--- a/static/css/_ad-1.sass
+++ b/static/css/_ad-1.sass
@@ -55,6 +55,7 @@
             height: 100%
             width: auto
             margin: 0 auto
+            max-width: 90%
 
     .other-prices
         color: $white
